# sticky-app

./: .gitignore  LICENSE  Makefile  README.md  package.json  server.js
.github/workflows/: release.yml
public/: app.js  calendar.html  calendar.js  index.html  listen.js  storage.js  style.css  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
